Loader stuff cleaned up, starting to work on container system, volume basic tests are passing.